tests/ui/consts/const-eval/const-eval-span.stderr
error[E0308]: mismatched types
  --> $DIR/const-eval-span.rs:9:9
   |
LL |     V = CONSTANT,
   |         ^^^^^^^^ expected `isize`, found `S`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
